--- a/insight/summary_recent.yaml
+++ b/insight/summary_recent.yaml
@@ -1,211 +1,112 @@
-Career Insights - AI Platform Backend Position Analysis Applied:
+Career_Insights_AI_Platform_Backend:
   core_competencies:
     technical_depth:
-      - embedded_ai_optimization: "Jetson TensorRT 경험 기반 엣지 디바이스 AI 모델 최적화 전문성"
-      - 3d_spatial_computing: "2D vision을 넘어선 3차원 공간 인식 및 매핑 능력 (로봇 환경 인식)"
-      - signal_processing: "멀티센서 데이터 융합 및 물리적 특성 기반 노이즈 필터링"
-      - full_stack_mlops: "오토레이블링-학습-배포 전체 파이프라인 구축 및 운영"
-      - hybrid_infrastructure: "AMQP+GitOps 기반 온프레미스-클라우드 하이브리드 인프라 운영 철학"
-      - database_architecture: "RDBMS/NoSQL 기능적 차이 이해 및 고가용성 아키텍처 설계"
-      - systematic_tech_adoption: "kubeadmin 학습 후 k3s 실무 적용 - 복잡한 방식으로 원리 이해 후 실무 최적화하는 체계적 기술 습득 방법론"
-      - async_programming_mastery: "IO바운드 연산의 논블럭킹 특성과 커넥션 풀 관리 실무 경험 - 고성능 웹 서비스 동시성 처리 전문성"
-      - diverse_database_operation: "MongoDB, InfluxDB 포함 다종 데이터베이스 활용 - 시계열 및 문서 기반 데이터 특성 이해한 기술 선택"
+      embedded_ai: "Jetson TensorRT → 엣지 AI 최적화"
+      spatial_computing: "3D 공간인식/매핑, 멀티센서 융합"
+      mlops_pipeline: "오토레이블링-학습-배포 전체 구축"
+      hybrid_infra: "AMQP+GitOps 온프레미스-클라우드 통합"
+      database_arch: "RDBMS/NoSQL 고가용성 설계, 다종 DB 운영"
+      systematic_learning: "kubeadmin(학습)→k3s(운영) 체계적 접근"
+      async_mastery: "IO바운드 최적화, 커넥션풀 관리"
       
     system_design:
-      - resource_constrained_systems: "배터리, 연산 성능 제약 환경에서의 최적화 설계"
-      - stateless_msa_design: "Stateless MSA와 Master-slave 구조로 고가용성 확보 경험"
-      - scale_proven_architecture: "100대+ 규모 시스템에서 검증된 확장 가능한 아키텍처 설계력"
-      - fleet_management: "100대+ 디바이스 원격 모니터링 및 배포 시스템 구축"
-      - high_availability_systems: "서비스 연속성과 안정성을 고려한 아키텍처 설계"
-      - data_integrity_engineering: "CASCADE 설정 등 데이터 무결성 확보를 위한 체계적 접근"
-      - cost_efficiency_tech_balance: "비용 효율성과 기술 선진성을 동시에 추구하는 균형잡힌 접근"
-      - hybrid_infra_optimization: "온프레미스(학습 집약적) vs 클라우드(확장성) - 목적에 맞는 하이브리드 인프라 선택과 Self-hosted 솔루션 운영 경험"
-      - business_scalability_design: "현재 요구사항뿐만 아니라 미래 비즈니스 확장성을 고려한 아키텍처 설계"
-      - performance_structure_correlation: "데이터베이스 성능과 구조 설계의 상관관계를 깊이 이해한 최적화 접근"
-
-    ai_platform_backend_specialized:
-      - ml_pipeline_backend_integration: "오토레이블링-학습-배포 파이프라인과 웹 서비스 백엔드의 통합 설계"
-      - data_centric_mlops_philosophy: "'데이터가 비용이면서 동시에 곧 성능' - MLOps에서 데이터 거버넌스와 비용 효율성의 균형점 추구"
-      - quantified_impact_focus: "'100대+ 로봇', 'ML Engineer 8명 대상', '90% 단축' - 비즈니스 임팩트를 정량적 지표로 전환하는 성과 측정 역량"
-      - knowledge_sharing_culture: "Git branch 전략과 코드 리뷰로 '업무 영역에서 음영이 없도록' - 팀 전체의 기술 수준 향상과 지식 단절 방지 철학"
-      - collaboration_efficiency_mindset: "API 설계 시 개발팀 전체의 협업 효율성을 우선 고려하는 설계 철학"
-      - practical_technology_evaluation: "새로운 기술 도입 시 개발자 경험과 비즈니스 효율성을 균형있게 평가"
+      scalability: "100대+ 검증, Stateless MSA, Master-slave"
+      efficiency: "3GB/min 처리, 90% 시간단축, 20배 효율향상"
+      reliability: "고가용성, 데이터무결성, CASCADE 설계"
+      optimization: "비용효율성+기술선진성 균형"
 
   value_propositions:
     primary:
-      - ai_backend_convergence: "AI/ML 파이프라인과 웹 백엔드 서비스를 통합 설계하는 융합 역량"
-      - research_to_production: "연구 코드를 실제 서비스로 전환하는 검증된 경험"
-      - quantified_impact: "90% 단축, 20배 효율성 등 명확한 비즈니스 임팩트 창출"
-      - reliability_engineering: "자율주행 도메인에서 체득한 고신뢰성 시스템 설계"
-      - cross_domain_automation: "ML 모델부터 웹 서비스까지 포괄하는 다영역 자동화"
-      - precise_career_expression: "DevOps '2년+', 협업도구 '3년 경력' 등 구체적이고 정확한 경험 표현"
-      - honest_experience_expression: "'직접적인 대규모 클라우드 운영 경험은 제한적', 'Kubeflow를 직접 사용한 경험은 없습니다만' - 과장 없는 정직한 경험 표현과 학습 의지 표명"
-      - multi_database_architecture: "MongoDB, InfluxDB 등 다종 데이터베이스의 특성 이해한 적절한 기술 선택"
+      - "MLOps+백엔드 융합 → AI플랫폼 통합설계"
+      - "연구코드→프로덕션 전환 검증경험"
+      - "정량적 임팩트: 90%↓, 20배↑, 100대+"
+      - "자율주행 고신뢰성→AI플랫폼 적용"
       
     differentiators:
-      - systematic_documentation: "기록화와 체계화를 통한 지식 공유 문화 구축"
-      - theory_practice_balance: "대학교 자율주행 이론 학습과 실무 경험의 균형"
-      - adaptive_learning: "kubeadmin → k3s처럼 복잡한 기술을 실용적으로 단순화"
-      - proactive_tool_learning: "Airflow 등 필요 예상 도구를 미리 학습하는 준비성"
-      - migration_complexity_awareness: "다층적 연관 관계 마이그레이션 어려움을 사전 고려하는 설계"
-      - continuous_skill_development: "사이드 프로젝트를 통한 지속적 기술 역량 개발 및 실무 적용 문화"
+      - "체계적 문서화+지식공유 문화"
+      - "이론(대학)+실무 균형"
+      - "복잡→실용 단순화 능력"
+      - "미래기술 선제학습(Airflow)"
 
   growth_trajectory:
     technical_evolution:
-      - hybrid_evolution:
-          from: "Docker/Portainer 수동 운영"
-          to: "Kubernetes/ArgoCD + AMQP 기반 하이브리드 인프라 구축 주도"
-          
-      - scaling_evolution:
-          from: "Python 단일 스크립트"
-          to: "FastAPI+RabbitMQ 3GB/min 대용량 처리 + Stateless MSA 설계"
-          
-      - efficiency_evolution:
-          from: "SSH 개별 접속 (20분)"
-          to: "웹 기반 통합 플랫폼 (1분) + GitOps 자동화"
-          
-      - architecture_evolution:
-          from: "단순 DB 사용"
-          to: "고가용성 Master-slave 구조 + 데이터 무결성 설계"
-
-      - learning_methodology_evolution:
-          from: "기본 기술 직접 적용"
-          to: "복잡한 방식(kubeadmin) 학습 후 실무 최적화(k3s) 체계적 접근"
-
-      - ai_backend_integration_evolution:
-          from: "ML 모델과 웹 서비스 분리 운영"
-          to: "AI 파이프라인과 백엔드 서비스 통합 설계 + 협업 효율성 고려한 API 구축"
-        
+      infra: "Docker→K8s/ArgoCD+AMQP 하이브리드"
+      scale: "Python스크립트→FastAPI+RabbitMQ(3GB/min)"
+      efficiency: "SSH(20분)→웹플랫폼(1분)+GitOps"
+      
     domain_expansion:
-      - robotics_foundation: "자율주행 로봇 시스템 구축 경험"
-      - hybrid_cloud_expertise: "온프레미스-클라우드 하이브리드 운영 전문성"
-      - wearable_potential: "엣지 디바이스 최적화 → 웨어러블 도메인 확장 가능"
-      - iot_fleet_expertise: "대규모 디바이스 관리 → IoT 플릿 운영 역량"
-      - comprehensive_cicd: "단일 도메인 넘어선 포괄적 CI/CD 파이프라인 구축"
-      - ai_platform_backend_specialization: "AI 플랫폼 백엔드 개발자로서의 전문성 확장"
-      - ml_web_service_integration: "ML 모델 서빙과 웹 서비스를 통합한 AI 플랫폼 구축"
+      - "로봇→웨어러블/IoT 확장가능"
+      - "온프레미스-클라우드 하이브리드 전문"
+      - "ML-웹서비스 통합 AI플랫폼"
 
   work_philosophy:
-    leadership: "서번트 리더십 - 팀 성장과 지식 공유 중심"
-    problem_solving: "에러 메시지 → 콜스택 → 재현의 체계적 분석"
-    collaboration: "주간 피드백 세션과 스프린트 기반 지속적 개선"
-    communication: "정직한 한계 인정과 구체적 성과 중심 소통"
-    design_philosophy: "복잡성을 사전에 고려하는 선제적 아키텍처 설계"
-    balance_mindset: "기술 선진성과 비용 효율성을 동시에 고려하는 균형잡힌 의사결정"
-    transparency_culture: "업무 영역에서 음영이 없도록 하는 지식 공유와 투명성 추구"
-    business_scalability_focus: "현재 기능 구현보다 미래 비즈니스 확장성과 유지보수성을 중시"
-    continuous_learning_culture: "업무 외 시간 활용한 지속적 기술 역량 개발 및 실무 적용"
+    leadership: "서번트리더십, 팀성장 우선"
+    problem_solving: "에러→콜스택→재현 체계적분석"
+    design: "현재요구+미래확장성 동시고려"
+    communication: "정직한 한계인정+개선방향 제시"
 
   hidden_strengths:
-    - compiler_linker_expertise: "C++ ROS와 Go CGO 연동을 위한 저수준 시스템 이해"
-    - autonomous_system_theory: "자율주행 전 영역에 대한 이론적 기반"
-    - practical_innovation: "최신 기술(MCP, VectorDB)을 실무에 빠르게 적용"
-    - infrastructure_agnostic: "클라우드/온프레미스 양쪽 모두 구축 가능한 유연성"
-    - database_modeling_depth: "RDBMS/NoSQL 특성을 고려한 적절한 모델링 접근"
-    - amqp_messaging_mastery: "RabbitMQ 기반 메시징 아키텍처 설계 및 운영 전문성"
-    - systematic_learning_approach: "복잡한 기술의 원리 파악 후 실무 최적화하는 체계적 학습법"
-    - multi_database_expertise: "다종 데이터베이스의 특성 이해한 최적 기술 선택 및 운영"
+    - "컴파일러/링커 저수준 이해"
+    - "자율주행 전영역 이론기반"
+    - "최신기술 실무적용(MCP, VectorDB)"
+    - "인프라 유연성(클라우드/온프레미스)"
+    - "AMQP 메시징 아키텍처 전문"
+
+  암묵지_핵심:
+    학습방법론:
+      - "복잡원리 파악→실무최적화"
+      - "사이드프로젝트→실무적용 순환"
+    협업철학:
+      - "업무음영제거: Git전략+코드리뷰"  
+      - "정량지표 성과커뮤니케이션"
+    설계원칙:
+      - "비즈니스 확장성 우선"
+      - "협업효율성 중심 API설계"
 
   interview_positioning:
-    unique_narrative:
-      - "로봇 자율주행에서 체득한 고신뢰성 시스템 설계를 AI 플랫폼 백엔드에 적용"
-      - "AMQP+GitOps 기반 하이브리드 인프라로 AI 워크로드 비용 효율성과 기술 선진성 동시 확보"
-      - "100대+ 로봇 플릿 관리 경험을 대규모 AI 서비스 운영에 활용"
-      - "TensorRT 최적화 경험으로 AI 모델 서빙 성능 병목 해결"
-      - "ML 파이프라인부터 웹 서비스까지 포괄하는 AI 플랫폼 전체 자동화"
-      - "MLOps 전문성과 백엔드 개발 역량을 결합한 AI 플랫폼 통합 설계"
-      
+    unique_narrative: "100대+ 규모 검증 AI플랫폼 백엔드 전문가"
+    
     concrete_examples:
-      - scale: "3GB/min 데이터 처리, 100대+ 디바이스 동시 관리"
-      - efficiency: "배포 시간 90% 단축, 업무 효율성 20배 향상"
-      - reliability: "Stateless MSA + Master-slave 구조로 고가용성 확보"
-      - automation_scope: "오토레이블링-학습-배포 전체 파이프라인 자동화"
-      - hybrid_cost_efficiency: "온프레미스-클라우드 하이브리드로 AI 워크로드 비용 최적화 달성"
-      - team_impact: "ML Engineer 8명 대상 워크플로우 개선"
-
-    ai_platform_backend_specific_positioning:
-      - ml_backend_convergence: "MLOps 전문성과 백엔드 개발 역량을 결합한 AI 플랫폼 통합 설계"
-      - data_centric_philosophy: "데이터가 비용이면서 동시에 성능이라는 AI 플랫폼 핵심 철학 체화"
-      - collaboration_efficiency: "API 설계 시 개발팀 전체의 협업 효율성을 우선 고려하는 설계 철학"
-      - business_scalability_mindset: "단순 기능 구현을 넘어 AI 서비스의 비즈니스 확장성과 유지보수성 추구"
-      - systematic_ai_tech_adoption: "복잡한 AI/ML 기술의 원리 파악 후 실무 최적화하는 체계적 학습법"
-      - continuous_ai_development_culture: "사이드 프로젝트를 통한 AI 기술 역량 개발 및 백엔드 실무 적용"
+      scale: "3GB/min, 100대+, ML팀 8명"
+      impact: "90% 단축, 20배 향상"
+      tech: "TensorRT, AMQP+GitOps, Stateless MSA"
+      
+    ai_platform_focus:
+      - "ML파이프라인-웹서비스 통합설계"
+      - "데이터=비용+성능 철학"
+      - "팀전체 협업효율 API설계"
+      - "하이브리드 인프라 비용최적화"
 
   areas_for_growth:
     acknowledged:
-      - enterprise_scale: "대규모 엔터프라이즈 AI 플랫폼 환경 경험 확대 필요"
-      - team_leadership: "AI 플랫폼 기술 리드 역할로의 성장 기회 모색"
-      - domain_specialization: "특정 AI 도메인(NLP, Computer Vision 등)의 더 깊은 전문성 개발"
-      - workflow_orchestration: "Airflow 등 AI 워크플로우 오케스트레이션 도구 실무 적용 경험"
-      - kubeflow_experience: "Kubeflow를 직접 사용한 AI 파이프라인 구축 경험 부족 - 학습 계획 수립 필요"
-      - large_scale_cloud: "직접적인 대규모 클라우드 AI 서비스 운영 경험 제한 - 점진적 확장 필요"
-      - advanced_ai_frameworks: "최신 AI/ML 프레임워크와 도구들의 심화 학습 필요"
-      - ai_microservices_patterns: "AI 모델 서빙을 위한 마이크로서비스 패턴과 분산 시스템 설계 경험 확대"
+      - "대규모클라우드→점진확장"
+      - "Kubeflow→학습계획"
+      - "AI도메인특화(NLP/CV)→심화"
       
     learning_attitude:
-      - continuous_improvement: "부족한 부분을 인정하며 AI 플랫폼 관련 개선 방향 제시"
-      - practical_application: "새로운 AI 기술을 실무에 빠르게 적용하는 균형"
-      - complexity_management: "복잡한 AI 시스템 설계 시 발생 가능한 문제 사전 고려"
-      - proactive_preparation: "AI 플랫폼에 필요할 것으로 예상되는 기술을 미리 학습하는 태도"
-      - honest_communication: "과장 없는 정직한 AI 경험 표현으로 신뢰 구축"
-      - business_impact_focus: "AI 기술적 성취를 비즈니스 임팩트로 연결하는 사고"
+      - "한계인정+개선제시"
+      - "실무적용 우선"
+      - "비즈니스임팩트 연결"
 
-  company_feedback_insights:
-    kobaltics_position_analysis:  # 2025-07-04 코발틱스 분석 반영
-      strengths_confirmed:
-        - hybrid_infrastructure_mastery: "AMQP+GitOps 기반 온프레미스-클라우드 하이브리드 운영 철학 검증"
-        - balanced_decision_making: "비용 효율성과 기술 선진성을 동시에 추구하는 균형잡힌 접근 확인"
-        - proven_architecture_design: "Stateless MSA와 Master-slave 구조로 고가용성 확보한 실무 경험"
-        - scale_validation: "100대+ 규모 시스템에서 검증된 확장 가능한 아키텍처 설계력"
-        - forward_thinking: "Airflow 등 필요 예상 도구를 미리 학습하는 준비성 평가"
-        - precise_communication: "DevOps '2년+', 협업도구 '3년 경력' 등 구체적이고 정확한 경험 표현력"
-      
-      positioning_advantages:
-        - hybrid_cloud_specialist: "순수 클라우드나 온프레미스가 아닌 하이브리드 전문가로 차별화"
-        - cost_conscious_engineer: "기술적 우수성과 비용 효율성을 모두 고려하는 실용적 엔지니어"
-        - scale_proven_experience: "이론이 아닌 실제 100대+ 시스템 운영으로 검증된 역량"
-        - proactive_learner: "현재 필요한 기술뿐만 아니라 미래 필요 기술까지 대비하는 성장 마인드"
+  company_insights_summary:
+    코발틱스: "하이브리드인프라+균형의사결정"
+    다키클라우드: "체계적학습+정량성과"
+    인터엑스: "협업효율API+비동기처리"
+    겟앤쇼: "데이터설계철학+고가용성"
+    케이알엠: "3D재구성+실험→운영전환"
+    웨어러블AI: "리소스제약최적화+실시간모니터링"
 
-    dakicloud_mlops_position_insights:  # 2025-07-05 다키클라우드코리아 MLOps 플랫폼 개발자 분석 추가
-      key_discoveries:
-        - systematic_tech_adoption: "kubeadmin 학습 후 k3s 실무 적용 - 복잡한 방식으로 원리 이해 후 실무 최적화하는 체계적 기술 습득 방법론"
-        - honest_experience_expression: "'직접적인 대규모 클라우드 운영 경험은 제한적', 'Kubeflow를 직접 사용한 경험은 없습니다만' - 과장 없는 정직한 경험 표현과 학습 의지 표명"
-        - quantified_impact_focus: "'100대+ 로봇', 'ML Engineer 8명 대상', '90% 단축' - 비즈니스 임팩트를 정량적 지표로 전환하는 성과 측정 역량"
-        - data_centric_mlops_philosophy: "'데이터가 비용이면서 동시에 곧 성능' - MLOps에서 데이터 거버넌스와 비용 효율성의 균형점 추구"
-        - hybrid_infra_optimization: "온프레미스(학습 집약적) vs 클라우드(확장성) - 목적에 맞는 하이브리드 인프라 선택과 Self-hosted 솔루션 운영 경험"
-        - knowledge_sharing_culture: "Git branch 전략과 코드 리뷰로 '업무 영역에서 음영이 없도록' - 팀 전체의 기술 수준 향상과 지식 단절 방지 철학"
-
-      mlops_specific_strengths:
-        - systematic_learning_methodology: "복잡한 기술의 원리 파악 후 단순화하는 체계적 접근으로 MLOps 도구 습득"
-        - data_cost_performance_balance: "데이터 거버넌스와 비용 효율성을 동시에 고려하는 MLOps 철학"
-        - team_enablement_focus: "개인 성과보다 팀 전체 역량 향상을 우선시하는 리더십"
-        - quantified_business_impact: "기술적 성과를 비즈니스 임팩트로 전환하는 측정 역량"
-
-    general_backend_development_insights:  # 일반적인 백엔드 개발 역량으로 재분류
-      core_backend_capabilities:
-        - api_collaboration_efficiency: "언더패칭/오버패칭 문제 인식을 통한 프론트엔드 협업 최적화"
-        - business_oriented_database_design: "스키마 설계 시 미래 비즈니스 확장성과 유지보수성 고려"
-        - async_programming_expertise: "IO바운드 연산 최적화와 커넥션 풀 관리를 통한 고성능 동시성 처리"
-        - database_performance_optimization: "조인 쿼리 성능과 모델링의 상관관계 이해한 최적화"
-        - practical_technology_selection: "GraphQL 등 기술 도입 시 개발자 경험과 비즈니스 효율성 균형"
-        - multi_database_management: "MongoDB, InfluxDB 등 다종 데이터베이스의 특성 이해한 적절한 선택"
-
-  recommended_positioning_strategy:
-    primary_narrative: "AI 플랫폼 백엔드 전문가 - MLOps 전문성과 웹 백엔드 역량을 결합한 통합 AI 서비스 설계"
-    secondary_strengths: 
-      - "100대+ 규모에서 검증된 확장 가능한 AI 시스템 설계"
-      - "AMQP+GitOps 기반 AI 워크로드 하이브리드 인프라 구축"
-      - "데이터 중심 MLOps 철학과 비용 효율성 균형"
-      - "API 설계 시 개발팀 전체 협업 효율성을 고려하는 설계 철학"
-      - "비동기 처리를 활용한 고성능 AI 파이프라인과 웹 서비스 통합"
-      - "AI 워크로드에 최적화된 다중 DB 환경 설계 및 운영"
+  recommended_positioning:
+    primary: "AI플랫폼 백엔드 전문가 - MLOps+웹서비스 통합설계"
     
+    key_messages:
+      - "100대+ 규모 검증된 확장성"
+      - "AMQP+GitOps 하이브리드 인프라"
+      - "데이터중심 MLOps+비용효율"
+      - "팀협업 효율성 중심 설계"
+      
     interview_emphasis:
-      - concrete_scale_examples: "3GB/min, 100대+, 90% 단축 등 구체적 수치"
-      - ai_backend_integration: "ML 파이프라인과 웹 서비스를 통합한 AI 플랫폼 구축 경험"
-      - data_centric_philosophy: "데이터가 비용이면서 동시에 성능이라는 AI 플랫폼 핵심 철학"
-      - collaboration_efficiency: "API 설계 시 개발팀 전체 협업 효율성 고려"
-      - business_scalability: "단순 기능 구현을 넘어선 AI 서비스의 비즈니스 확장성 고려"
-      - multi_database_optimization: "AI 워크로드 특성을 고려한 다종 DB 최적 선택"
-      - systematic_approach: "복잡한 AI/ML 기술의 원리 파악 후 실무 최적화하는 체계적 학습법"
-      - team_impact_focus: "ML Engineer 8명 대상 워크플로우 개선 등 팀 전체 AI 개발 임팩트"
+      - "구체적수치: 3GB/min, 100대+, 90%"
+      - "통합경험: ML파이프라인↔웹서비스"
+      - "팀임팩트: 8명 워크플로우 개선"
+      - "체계적접근: 원리→최적화"
